style.css
:root {
  --color-accent: oklch(65% 0.3 280);
  accent-color: var(--color-accent);
  color-scheme: dark;
}

label.color-scheme {
  position: absolute;
  top: 1rem;
  right: 1rem;
  font-size: 80%;
  font-family: inherit;
}

body {
  font: 100% / 1.5 system-ui;
  display: block;
  max-width: 65em;
  margin-inline: auto;
  padding: 5em;
}

nav {
  display: flex;
  --border-color: oklch(50% 10% 200 / 40%);
  border-bottom: 1px solid;
  border-bottom-color: var(--border-color);
  margin-bottom: 1.5em;
}

nav a {
  flex: 1;
  text-align: center;
  padding: 0.5em;
  text-decoration: none;
  color: inherit;
}

nav a.current {
  font-weight: bold;
  border-bottom: 0.4em solid oklch(50% 10% 200); 
  padding-bottom: 0.2em;
}

nav a:hover {
  border-bottom: 0.4em solid var(--color-accent);
  padding-bottom: 0.1em;
  background-color: oklch(65% 0.3 280 / 0.25);
}

form {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 1em;
}

label {
  display: grid;
  grid-template-columns: subgrid;
  grid-column: 1 / -1;
}

button {
  grid-column: 1 / -1;
}

.projects {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
  gap: 1em;
}

article {
  display: grid;
  grid-template-rows: subgrid;
  grid-row: span 3;
}

article h2 {
  margin: 0;
}

h1 {
  font-size: 400%;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1.1;
  text-wrap: balance;
}

.cv-page p {
  max-width: 40em;
  margin-block: 1em;
}

h2 {
  margin-top: 2em;
}

ul {
  padding-left: 1.25em;
  margin-block: 0.5em 1.5em;
}

ul li {
  margin-bottom: 0.5em;
}

a[href^="mailto:"] {
  word-break: break-all;
  color: var(--color-accent);
  text-decoration: none;
}

a.cv-desc {
  color: var(--color-accent) !important;
  word-break: break-word;
  text-decoration: none;
}

strong {
  font-weight: 600;
}


/* Dark mode styling: */
@media (prefers-color-scheme: dark) {
  :root {
    --background-dark: oklch(15% 0.04 260);
    --accent-dark: oklch(70% 0.2 280);       
    --hover-bg-dark: oklch(40% 0.05 280);    
  }

  body {
    background-color: var(--background-dark);
    color: canvastext;
  }

  nav {
    background-color: oklch(20% 0.05 260);
  }

  nav a.current {
    border-bottom: 0.4em solid var(--accent-dark);
  }

  nav a:hover {
    border-bottom: 0.4em solid var(--accent-dark);
    background-color: var(--hover-bg-dark);
  }
}

